Correciones sobre interfaz y servicios